--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,3 +1,8 @@
 @import 'setup';
+@import 'global';
+@import 'nav';
 @import 'header';
+@import 'aboutSection';
+@import 'portfolioSection';
+@import 'contactSection';
 @import 'footer';
