--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -1,3 +1,41 @@
+h1,
 h2 {
   text-align: center;
+}
+
+h1 {
+  padding: 25px 0;
+  line-height: 100px;
+  font-size: 9rem;
+  font-weight: 500;
+}
+
+h2 {
+  font-size: 5rem;
+  text-transform: capitalize;
+  margin-bottom: 50px;
+}
+
+button {
+  cursor: pointer;
+  text-transform: capitalize;
+  background-color: darkred;
+  color: mintcream;
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  transition: all 0.3s linear;
+}
+
+button:hover {
+  transform: scale(1.1);
+}
+
+a {
+  color: mintcream;
+  text-transform: capitalize;
+}
+
+section {
+  height: 100vh;
 }
