--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -1,3 +1,7 @@
-h1 {
-  color: red;
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
