--- a/styles/sass/_setup.scss
+++ b/styles/sass/_setup.scss
@@ -35,8 +35,8 @@ a {
 }
 
 img {
-  width: 100%;
   display: block;
+  width: 100%;
 }
 
 .wrapper {
@@ -46,9 +46,13 @@ img {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
   font-size: 2rem;
-  color: black;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.95);
+  color: mintcream;
+  // background: #2B2B2B url(./assets/bg01.png) repeat;
+  // color: #D9D9D9;
   line-height: 29px;
   letter-spacing: 1px;
 }
