--- a/styles/sass/_contactSection.scss
+++ b/styles/sass/_contactSection.scss
@@ -1,8 +1,5 @@
-.contact {
+.contactContainer {
   padding: 25px 200px;
-}
-
-.personalInfo {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,9 +8,14 @@
 #name,
 #email,
 #message {
-  border: 5px solid black;
+  border: 5px solid $colour1;
   border-radius: 10px;
   width: 100%;
   padding: 15px;
   margin: 2px 0;
+}
+
+input[type="submit"] {
+  margin: 8px 0;
+  padding: 25px;
 }
