--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -4,38 +4,63 @@ h2 {
 }
 
 h1 {
+  display: none;
   padding: 25px 0;
   line-height: 100px;
-  font-size: 9rem;
+  font-size: 10rem;
   font-weight: 500;
 }
 
 h2 {
-  font-size: 5rem;
+  font-size: 7rem;
   text-transform: capitalize;
   margin-bottom: 50px;
 }
 
-button {
+h2:after {
+  content: '';
+  display: block;
+  height: 3px;
+  background: $colour2;
+  margin: 50px 400px 0 400px;
+}
+
+h3 {
+  font-size: 3.5rem;
+  padding: 25px 0;
+  text-transform: capitalize;
+}
+
+button,
+.guitarAppOverlay button,
+input[type="submit"] {
+  font-size: 2.5rem;
   cursor: pointer;
   text-transform: capitalize;
-  background-color: darkred;
-  color: mintcream;
+  background-color: $colour3;
+  color: $colour2;
   border: none;
   border-radius: 10px;
   padding: 10px;
   transition: all 0.3s linear;
 }
 
-button:hover {
-  transform: scale(1.1);
+button {
+  padding: 25px 50px;
+  margin: 50px 0;
 }
 
-a {
-  color: mintcream;
-  text-transform: capitalize;
+button:hover,
+input[type="submit"]:hover {
+  transform: scale(1.05);
 }
 
-section {
-  height: 100vh;
+// section {
+//   height: 800px;
+// }
+
+.about,
+.projects,
+.contact {
+  padding-top: 50px;
 }
