--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -4,4 +4,35 @@ header {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-image: url(./assets/stars.jpg);
+  background-size: cover;
+  img {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    height: 50px;
+    width: 50px;
+  }
+}
+
+.clouds { 
+  position: absolute; 
+  top: 60px; 
+  left: 0;
+  width: 100%; 
+  height: 100%; 
+  background: url(./assets/cloud.png);
+  animation: animate 300s linear infinite; 
+}
+
+@keyframes animate { 
+  0% { background-position: 0px; } 
+  100% { background-position: -5440px; } 
+}
+
+.headerInfoContainer {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
