--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -1,8 +1,7 @@
 .navContainer {
   padding: 15px 0;
-  border: 2px solid white;
-  background-color: black;
-  text-align: center;
+  background-color: $colour1;
+  text-align: right;
   // position: fixed;
   // top: 0;
   // width: 100%;
@@ -12,16 +11,13 @@
     text-transform: uppercase;
     a {
       padding: 0 25px;
-      color: #D9D9D9;
-      transition: all 0.2s linear;
-      font-size: 3rem;
+      font-size: 2.5rem;
     }
   }
 }
 
 .navContainer a:hover {
-  background-color: mintcream;
-  color: black;
+  background-color: $colour2;
+  color: $colour1;
   border-radius: 10px;
-  transform: scale(1.5);;
 }
