--- a/styles/sass/_portfolioSection.scss
+++ b/styles/sass/_portfolioSection.scss
@@ -1,5 +1,18 @@
+.projects {
+  padding-top: 50px;
+  background-color: $colour2;
+  color: $colour1;
+  h2:after {
+    content: '';
+    display: block;
+    height: 3px;
+    background: $colour1;
+    margin: 50px 400px 0 400px;
+  }
+}
+
 .projectsContainer img {
-  border: 2px solid black;
+  border: 2px solid $colour1;
   border-radius: 15px;
 }
 
@@ -8,6 +21,9 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
+  a:hover {
+    transform: none;
+  }
 }
 
 .guitarApp {
@@ -32,5 +48,5 @@
 
 .guitarApp:hover .guitarAppOverlay {
   opacity: 1;
-  color: black;
+  color: $colour1;
 }
