--- a/styles/sass/_aboutSection.scss
+++ b/styles/sass/_aboutSection.scss
@@ -61,3 +61,43 @@
 .mySkills img:hover {
   transform: scale(1.1);
 }
+
+// Media Queries //
+
+@media (max-width: 1000px) {
+  .aboutContainer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .bioContainer,
+  .skillsContainer {
+    width: 100%;
+  }
+
+  .bioContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 2px solid $colour2;
+    p {
+      text-align: center;
+    }
+    a {
+      padding: 25px;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .mySkills li img {
+    height: 80px;
+    width: 80px;
+  }
+
+  .mySkills {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
