--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -22,11 +22,11 @@ header {
   width: 100%; 
   height: 100%; 
   background: url(./assets/cloud.png);
-  animation: animate 300s linear infinite; 
+  animation: animate 1000s linear infinite; 
 }
 
 @keyframes animate { 
-  0% { background-position: 0px; } 
+  0% { background-position: 600px; } 
   100% { background-position: -5440px; } 
 }
 
@@ -35,4 +35,21 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  span {
+    color: $colour3;
+  }
+}
+
+// Media Queries //
+@media (max-width: 900px) {
+  header {
+    background-image: url(./assets/sand.jpg);
+  }
+}
+
+// Reduced Motion Media Styles //
+@media (prefers-reduced-motion: reduce) {
+  .clouds {
+    animation: none;
+  }
 }
