--- a/styles/sass/_portfolioSection.scss
+++ b/styles/sass/_portfolioSection.scss
@@ -1,7 +1,10 @@
 .projects {
-  padding-top: 50px;
+  padding: 50px 0;
   background-color: $colour2;
   color: $colour1;
+  p {
+    text-align: center;
+  }
   h2:after {
     content: '';
     display: block;
@@ -26,12 +29,12 @@
   }
 }
 
-.guitarApp {
+.app {
   position: relative;
   margin: 10px 0;
 }
 
-.guitarAppOverlay {
+.appOverlay {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -46,7 +49,53 @@
   border-radius: 15px;
 }
 
-.guitarApp:hover .guitarAppOverlay {
+.app:hover .appOverlay {
   opacity: 1;
   color: $colour1;
+}
+
+@media (max-width: 1180px) {
+  .projectsContainer {
+    display: flex;
+    flex-direction: column;
+  }
+  .app {
+    margin: 10px 100px;
+  }
+
+  // .guitarAppOverlay {
+  //   position: initial;
+  //   opacity: 1;
+  // }
+}
+
+@media (max-width: 1050px) {
+  .projects h2:after {
+    display: none;
+  }
+}
+
+@media (max-width: 800px) {
+  .app {
+    margin: 10px;
+  }
+}
+
+@media (max-width: 420px) {
+  .appOverlay p {
+    font-size: 1.5rem;
+  }
+  .appOverlay button {
+    font-size: 2rem;
+    margin: 20px 0;
+  }
+}
+
+@media (max-width: 340px) {
+  .appOverlay p {
+    line-height: 20px;
+  }
+  .appOverlay button {
+    font-size: 1.5rem;
+  }
 }
