--- a/styles/style.css
+++ b/styles/style.css
@@ -309,6 +309,7 @@ h2 {
   font-size: 7rem;
   text-transform: capitalize;
   margin-bottom: 50px;
+  font-weight: 500;
 }
 
 h2:after {
@@ -326,7 +327,7 @@ h3 {
 }
 
 button,
-.guitarAppOverlay button,
+.appOverlay button,
 input[type="submit"] {
   font-size: 2.5rem;
   cursor: pointer;
@@ -357,6 +358,70 @@ input[type="submit"]:hover {
   padding-top: 50px;
 }
 
+.about,
+.toTopContainer,
+.contact {
+  position: relative;
+}
+
+.toTop {
+  position: absolute;
+  top: 15px;
+  right: 0;
+}
+
+.projects .toTop {
+  top: -35px;
+  color: black;
+}
+
+@media (max-width: 1050px) {
+  h2:after {
+    display: none;
+  }
+}
+
+@media (max-width: 660px) {
+  h1 {
+    font-size: 8.5rem;
+  }
+  h2 {
+    font-size: 5.5rem;
+  }
+}
+
+@media (max-width: 565px) {
+  h1 {
+    font-size: 7.5rem;
+    line-height: 75px;
+  }
+  h2 {
+    font-size: 4.5rem;
+  }
+}
+
+@media (max-width: 500px) {
+  h1 {
+    font-size: 6.5rem;
+  }
+  h2 {
+    font-size: 4rem;
+  }
+}
+
+@media (max-width: 435px) {
+  h1 {
+    font-size: 5.5rem;
+    line-height: 65px;
+  }
+}
+
+@media (max-width: 380px) {
+  h1 {
+    font-size: 4.5rem;
+  }
+}
+
 .navContainer {
   padding: 15px 0;
   background-color: black;
@@ -378,6 +443,14 @@ input[type="submit"]:hover {
   background-color: white;
   color: black;
   border-radius: 10px;
+  -webkit-transform: none;
+          transform: none;
+}
+
+@media (max-width: 660px) {
+  ul {
+    display: none;
+  }
 }
 
 header {
@@ -414,13 +487,13 @@ header img {
   width: 100%;
   height: 100%;
   background: url(./assets/cloud.png);
-  -webkit-animation: animate 300s linear infinite;
-          animation: animate 300s linear infinite;
+  -webkit-animation: animate 1000s linear infinite;
+          animation: animate 1000s linear infinite;
 }
 
 @-webkit-keyframes animate {
   0% {
-    background-position: 0px;
+    background-position: 600px;
   }
   100% {
     background-position: -5440px;
@@ -429,7 +502,7 @@ header img {
 
 @keyframes animate {
   0% {
-    background-position: 0px;
+    background-position: 600px;
   }
   100% {
     background-position: -5440px;
@@ -448,6 +521,23 @@ header img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.headerInfoContainer span {
+  color: darkred;
+}
+
+@media (max-width: 900px) {
+  header {
+    background-image: url(./assets/sand.jpg);
+  }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .clouds {
+    -webkit-animation: none;
+            animation: none;
+  }
 }
 
 .about {
@@ -524,10 +614,66 @@ header img {
           transform: scale(1.1);
 }
 
+@media (max-width: 1000px) {
+  .aboutContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .bioContainer,
+  .skillsContainer {
+    width: 100%;
+  }
+  .bioContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-bottom: 2px solid white;
+  }
+  .bioContainer p {
+    text-align: center;
+  }
+  .bioContainer a {
+    padding: 25px;
+  }
+}
+
+@media (max-width: 500px) {
+  .mySkills li img {
+    height: 80px;
+    width: 80px;
+  }
+  .mySkills {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .projects {
-  padding-top: 50px;
+  padding: 50px 0;
   background-color: white;
   color: black;
+}
+
+.projects p {
+  text-align: center;
 }
 
 .projects h2:after {
@@ -557,12 +703,12 @@ header img {
           transform: none;
 }
 
-.guitarApp {
+.app {
   position: relative;
   margin: 10px 0;
 }
 
-.guitarAppOverlay {
+.appOverlay {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -578,9 +724,55 @@ header img {
   border-radius: 15px;
 }
 
-.guitarApp:hover .guitarAppOverlay {
+.app:hover .appOverlay {
   opacity: 1;
   color: black;
+}
+
+@media (max-width: 1180px) {
+  .projectsContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .app {
+    margin: 10px 100px;
+  }
+}
+
+@media (max-width: 1050px) {
+  .projects h2:after {
+    display: none;
+  }
+}
+
+@media (max-width: 800px) {
+  .app {
+    margin: 10px;
+  }
+}
+
+@media (max-width: 420px) {
+  .appOverlay p {
+    font-size: 1.5rem;
+  }
+  .appOverlay button {
+    font-size: 2rem;
+    margin: 20px 0;
+  }
+}
+
+@media (max-width: 340px) {
+  .appOverlay p {
+    line-height: 20px;
+  }
+  .appOverlay button {
+    font-size: 1.5rem;
+  }
 }
 
 .contactContainer {
@@ -610,6 +802,18 @@ header img {
 input[type="submit"] {
   margin: 8px 0;
   padding: 25px;
+}
+
+@media (max-width: 1000px) {
+  .contactContainer {
+    padding: 25px 100px;
+  }
+}
+
+@media (max-width: 800px) {
+  .contactContainer {
+    padding: 25px 0;
+  }
 }
 
 .footerContainer {
