--- a/styles/sass/_aboutSection.scss
+++ b/styles/sass/_aboutSection.scss
@@ -31,7 +31,7 @@
     display: inline-block;
     margin: 10px 0;
     font-size: 3rem;
-    color: lightskyblue;
+    color: $colour4;
     transition: all 0.3s linear;
   }
   a:hover {
