--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -1,28 +1,30 @@
 header {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
   height: 100vh;
   background-image: url(./assets/stars.jpg);
   background-size: cover;
   img {
     position: absolute;
-    top: 5px;
-    left: 5px;
+    top: 15px;
+    left: 15px;
     height: 50px;
     width: 50px;
+  }
+  button {
+    padding: 25px 50px;
+    margin: 50px 0;
   }
 }
 
 .clouds { 
   position: absolute; 
-  top: 60px; 
+  top: 80px; 
   left: 0;
   width: 100%; 
   height: 100%; 
   background: url(./assets/cloud.png);
-  animation: animate 1000s linear infinite; 
+  animation: animate 800s linear infinite; 
 }
 
 @keyframes animate { 
@@ -44,6 +46,15 @@ header {
 @media (max-width: 900px) {
   header {
     background-image: url(./assets/sand.jpg);
+  }
+}
+
+@media (max-width: 600px) {
+  header {
+    // align-items: flex-start;
+    img {
+      display: none;
+    }
   }
 }
 
