--- a/styles/sass/_portfolioSection.scss
+++ b/styles/sass/_portfolioSection.scss
@@ -2,9 +2,6 @@
   padding: 50px 0;
   background-color: $colour2;
   color: $colour1;
-  p {
-    text-align: center;
-  }
   h2:after {
     content: '';
     display: block;
@@ -14,44 +11,85 @@
   }
 }
 
-.projectsContainer img {
-  border: 2px solid $colour1;
-  border-radius: 15px;
-}
-
 .projectsContainer {
-  text-align: center;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
+  .app {
+    position: relative;
+    margin: 100px 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  img {
+    border: 2px solid $colour1;
+    border-radius: 15px;
+    width: 50%;
+    height: 300px;
+  }
+  .appInfo {
+    width: 35%;
+  }
   a:hover {
     transform: none;
   }
 }
 
-.app {
-  position: relative;
-  margin: 10px 0;
-}
-
-.appOverlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
+.colleague {
+  color: $colour4;
   transition: all 0.3s linear;
-  background-color: hsla(0, 0%, 100%, .9);
-  padding: 15px;
-  border-radius: 15px;
 }
 
-.app:hover .appOverlay {
-  opacity: 1;
-  color: $colour1;
+.colleague:hover {
+  color: blue;
+}
+
+// .projectsContainer img {
+//   border: 2px solid $colour1;
+//   border-radius: 15px;
+//   width: 70%;
+// }
+
+
+// .app {
+//   position: relative;
+//   margin: 100px 0;
+//   display: flex;
+// }
+
+// .appOverlay {
+//   position: absolute;
+//   top: 0;
+//   bottom: 0;
+//   left: 0;
+//   right: 0;
+//   height: 100%;
+//   width: 100%;
+//   opacity: 0;
+//   transition: all 0.3s linear;
+//   background-color: hsla(0, 0%, 100%, .9);
+//   padding: 15px;
+//   border-radius: 15px;
+// }
+
+// .app:hover .appOverlay {
+//   opacity: 1;
+//   color: $colour1;
+// }
+
+.skillsUsed {
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  color: $colour2;
+  margin: 25px 0;
+  li {
+    background-color: $colour1;
+    padding: 10px;
+    margin-right: 10px;
+  }
+}
+
+.gotSkillsUsed {
+  grid-template-columns: repeat(3, 1fr);
 }
 
 @media (max-width: 1180px) {
@@ -73,29 +111,71 @@
   .projects h2:after {
     display: none;
   }
-}
 
-@media (max-width: 800px) {
-  .app {
-    margin: 10px;
+  .projectsContainer {
+    .app {
+      flex-direction: column;
+      margin: 25px 0;
+    }
+    img {
+      height: initial;
+      width: 100%;
+    }
+    .appInfo {
+      width: 100%;
+      text-align: center;
+      padding-bottom: 50px;
+    }
+  }
+
+  .skillsUsed {
+    justify-content: center;
+  }
+
+  .projectsContainer .gotQuiz {
+    flex-direction: column-reverse;
   }
 }
 
-@media (max-width: 420px) {
-  .appOverlay p {
-    font-size: 1.5rem;
-  }
-  .appOverlay button {
+@media (max-width: 660px) {
+  .appInfo p {
     font-size: 2rem;
-    margin: 20px 0;
   }
 }
 
-@media (max-width: 340px) {
-  .appOverlay p {
-    line-height: 20px;
-  }
-  .appOverlay button {
-    font-size: 1.5rem;
+@media (max-width: 565px) {
+  .appInfo p {
+    font-size: 1.8rem;
   }
 }
+
+@media (max-width: 380px) {
+  .skillsUsed li {
+    font-size: 1.6rem;
+  }
+}
+
+// @media (max-width: 800px) {
+//   .app {
+//     margin: 10px;
+//   }
+// }
+
+// @media (max-width: 420px) {
+//   .appOverlay p {
+//     font-size: 1.5rem;
+//   }
+//   .appOverlay button {
+//     font-size: 2rem;
+//     margin: 20px 0;
+//   }
+// }
+
+// @media (max-width: 340px) {
+//   .appOverlay p {
+//     line-height: 20px;
+//   }
+//   .appOverlay button {
+//     font-size: 1.5rem;
+//   }
+// }
