--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -1,3 +1,59 @@
+html {
+  font-size: 62.5%;
+  max-width: 100%;
+}
+
+ul,
+li,
+h1,
+h2,
+h3,
+h4,
+nav,
+p,
+img {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  display: inline-block;
+  text-decoration: none;
+  color: $colour2;
+  text-transform: capitalize;
+  transition: all 0.2s linear;
+}
+
+a:hover {
+  transform: scale(1.1);
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+.wrapper {
+  max-width: 1280px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+body {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
+  background-color: $colour1;
+  color: $colour2;
+  line-height: 29px;
+  letter-spacing: 1px;
+  overflow-x: hidden;
+}
+
 h1,
 h2 {
   text-align: center;
