--- a/styles/style.css
+++ b/styles/style.css
@@ -290,6 +290,7 @@ body {
   color: white;
   line-height: 29px;
   letter-spacing: 1px;
+  overflow-x: hidden;
 }
 
 h1,
@@ -518,7 +519,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100vh;
+  height: 750px;
   background-image: url(./assets/stars.jpg);
   background-size: cover;
 }
@@ -541,7 +542,7 @@ header button {
   top: 80px;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 750px;
   background: url(./assets/cloud.png);
   -webkit-animation: animate 800s linear infinite;
           animation: animate 800s linear infinite;
@@ -868,6 +869,26 @@ header button {
   }
 }
 
+.getInTouch {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.getInTouch a {
+  text-transform: initial;
+  padding: 15px;
+}
+
+.getInTouch img {
+  margin: 0 auto;
+  height: 50px;
+  width: 50px;
+}
+
 .contactContainer {
   padding: 25px 200px;
   display: -webkit-box;
@@ -909,6 +930,18 @@ input[type="submit"] {
   }
 }
 
+@media (max-width: 600px) {
+  .getInTouch {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .footerContainer {
   background-color: white;
   color: black;
@@ -930,4 +963,13 @@ input[type="submit"] {
 .footerContainer .icons a:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
+}
+
+@media (max-width: 360px) {
+  .footerContainer p {
+    font-size: 2.6rem;
+  }
+  .footerContainer i {
+    font-size: 4rem;
+  }
 }
