Some more styling changes

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -51,6 +51,11 @@ body {
   color: $colour2;
   line-height: 29px;
   letter-spacing: 1px;
+}
+
+html,
+.wrapper,
+body {
   overflow-x: hidden;
 }
 
@@ -72,6 +77,7 @@ h2 {
   text-transform: capitalize;
   margin-bottom: 50px;
   font-weight: 500;
+  padding: 15px 0;
 }
 
 h2:after {
@@ -122,7 +128,7 @@ input[type="submit"]:hover {
 .toTop {
   position: absolute;
   top: 15px;
-  right: 0;
+  right: 15px;
 }
 
 .projects .toTop {
