--- a/styles/sass/_aboutSection.scss
+++ b/styles/sass/_aboutSection.scss
@@ -31,11 +31,12 @@
     display: inline-block;
     margin: 10px 0;
     font-size: 3rem;
-    color: $colour4;
+    color: $colour2;
     transition: all 0.3s linear;
   }
   a:hover {
-    transform: scale(1.05);
+    color: $colour4;
+    transform: none;
   }
 }
 
