--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -8,10 +8,15 @@
     padding: 25px;
     a {
       color: $colour1;
+      padding: 0 10px;
+    }
+    i {
+      color: $colour1;
       padding: 5px 10px;
       font-size: 5rem;
+      transition: all 0.3s linear;
     }
-    a:hover {
+    i:hover {
       transform: scale(1.1);
     }
   }
@@ -19,13 +24,20 @@
 
 // Media Queries //
 
-@media (max-width: 360px) {
+@media (max-width: 420px) {
   .footerContainer {
     p {
       font-size: 2.6rem;
     }
-    i {
-      font-size: 4rem;
+    .icons {
+      padding: 25px 0;
+      a {
+        padding: 0 5px;
+      }
+      i,
+      p {
+        font-size: 2.5rem;
+      }
     }
   }
 }
